RESOLVED FIXED275088
Fix copy/paste error in WebPageProxy::stopLoading log message
https://bugs.webkit.org/show_bug.cgi?id=275088
Summary Fix copy/paste error in WebPageProxy::stopLoading log message
Michael Catanzaro
Reported 2024-06-03 18:14:29 PDT
Fix copy/paste error in WebPageProxy::stopLoading log message
Attachments
Michael Catanzaro
Comment 1 2024-06-03 18:15:06 PDT
EWS
Comment 2 2024-06-03 21:03:42 PDT
Committed 279685@main (c14972b1ae13): <https://commits.webkit.org/279685@main> Reviewed commits have been landed. Closing PR #29483 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-03 21:04:15 PDT
Note You need to log in before you can comment on or make changes to this bug.