Fix copy/paste error in WebPageProxy::stopLoading log message https://bugs.webkit.org/show_bug.cgi?id=275088

Reviewed by Charlie Wolfe.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::stopLoading):

Canonical link: https://commits.webkit.org/279685@main